# xyz-spaces-python

./: .codecov.yml  .darglint  .gitignore  .ort.yml  .proclamation.json  .readthedocs.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  RELEASE.md  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: binder.yml  greetings.yml  main.yml  release.yml  stale.yml
binder/: README.md  environment.yml  postBuild
changes/docs/: pr.62.md  pr.89.md  pr.99.md
changes/features/: pr.101.md  pr.113.md  pr.40.md  pr.41.md  pr.42.md  pr.44.md  pr.49.md  pr.52.md  pr.54.md  pr.56.md  pr.57.md  pr.58.md  pr.61.md  pr.64.md  pr.68.md  pr.71.md  pr.72.md  pr.77.md  pr.79.md  pr.83.md  pr.93.md  pr.95.md  pr.96.md
changes/misc/: pr.28.md  pr.36.md  pr.38.md  pr.65.md
ci/env/: environment.yml
docs/adr/: 0001-record-architecture-decisions.md  0002-use-modern-project-tooling.md
docs/apiref/: conf.py  index.rst  xyzspaces.__version__.rst  xyzspaces.apis.rst  xyzspaces.curl.rst  xyzspaces.exceptions.rst  xyzspaces.rst  xyzspaces.spaces.rst  xyzspaces.utils.rst
docs/notebooks/: README.md  building_numbers.ipynb  country_names.ipynb  demo.ipynb  interactive_map_layer_introduction.ipynb  spaces_class_example.ipynb  talk_pyml_geopython_2020.ipynb  visual_clipping.ipynb  (+3 more)
scripts/: README.md  build_apiref.sh  build_docs.sh  check_xyz_platform.py  walk_spaces.py
xyzspaces/: __init__.py  __version__.py  _compact.py  apis.py  auth.py  constants.py  curl.py  exceptions.py  logconf.py  spaces.py  tools.py  utils.py
(+88 files in other folders)
