[bdist_wheel]
universal=1

[metadata]
name = xyzspaces
author = HERE Europe B.V.
author_email = XYZSPACES_PYTHON_SUPPORT@here.com
home-page = https://github.com/heremaps/xyz-spaces-python
description = Manage your XYZ Hub server or HERE Data Hub from Python
long-description = file: README.md
license = Apache-2.0
license_files =
    LICENSE
platform = any
keywords =
    XYZ
    API
    REST
    Client
    Geospatial
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
project_urls = 
    Bug Tracker = https://github.com/heremaps/xyz-spaces-python/issues
    Source = https://github.com/heremaps/xyz-spaces-python

[mypy]
ignore_missing_imports = True

[flake8]
max-line-length = 90
exclude = .git,__pycache__,doc/,docs/,build/,dist/,archive/
ignore = E203,W503,E231

[isort]
line_length = 90

[options]
python_requires >= 3.6
